[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
polyfit-rs = "0.2.1"
radix-heap = "0.4.2"
rayon = "1.8.0"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.release-with-debug]
inherits = "release"
debug = true

